Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-114056
SelectionLabel height doesn't set correctly
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
6.6.0 FF
Affects Version/s:
6.6.0
Component/s:
Graphs: 3D
Labels:
None
Commits:
44aa077fd (dev)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Dilek Akcay
Reporter:
Dilek Akcay
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
30 May '23 09:15
Updated:
15 Jun '23 15:05
Resolved:
30 May '23 20:33
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Recalculate selectionLabel height
Gerrit Review: