Recalculate selectionLabel height

Fixes: QTBUG-114056
Change-Id: I86bab6e1542d73da2b00ddc33a3f15c921fd8b0c
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>